# agent-notes-cpp

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  DBSchema.md  README.md  SampleText.txt  TODO.md  run.sh  setup.sh
include/: AudioBuffer.h  AudioCapture.h  DBHelper.h  LLMClient.h  LLamaServer.h  LlamaBridge.h  TranscriptDeduplicator.h  WhisperBridge.h  WhisperTranscriber.h
src/: AudioBuffer.cpp  AudioCapture.cpp  DBHelper.cpp  LLMClient.cpp  LlamaBridge.cpp  LlamaServer.cpp  TranscriptDeduplicator.cpp  WhisperBridge.cpp  WhisperTranscriber.cpp  main.cpp
